优化启动命令